--- a/merkletreehw.ipynb
+++ b/merkletreehw.ipynb
@@ -30,7 +30,7 @@
           "name": "stdout",
           "text": [
             "Inputs: \n",
-            "GeeksforGeeks | A | Computer | Science | Portal | For | Geeks\n",
+            "GeeksforGeeks | A | Computer | Science | Goodboy | Block | Geeks\n",
             "\n",
             "Root Hash: c033f9843bd80f42c03456a10ed3403b4f9addc6a042a5280540e54dee7b8d71\n",
             "\n",
